--- a/main.css
+++ b/main.css
@@ -47,12 +47,20 @@ li {
 body {
   padding-top: 5em;
   padding-bottom: 10em;
+  background-color: rgba(100, 100, 100, 0.3);
+}
+h2 {
+  font-size: 200%;
+}
+p {
+  font-size: 120%;
 }
 #services {
   text-align: center;
 }
 iframe {
   justify-content: center;
+  box-shadow: 0px 0px 10px black;
 }
 #services {
   padding-top: 5em;
@@ -64,6 +72,7 @@ iframe {
 }
 #order {
   padding-top: 10em;
+  font-size: 150%;
 }
 #form {
   font-weight: bold;
@@ -72,6 +81,9 @@ iframe {
 }
 #email {
   margin: 1em;
+  width: 50%;
+  max-width: 400px;
+  box-shadow: 2px 2px 5px black;
 }
 
 
